# Vietnamese-Alphabet-Pronunciation

./: Train Model.ipynb  home.py  main.py  menu.py  pyproject.toml  studying.py  utils.py
dataset/raw/: E_533edaa86a8048c99f7742cef07d0ab6.wav.bak  E_7188d58d14804b96860f5f621a8717ae.wav.bak  E_accae1ad99e24bf59ae0f0b0eeaa8c81.wav.bak  H_793e3dab71d84a1aad0963016f32a625.wav.bak  H_afc2ba64cd734dc3ac261b206acdcbed.wav.bak  H_d5682c8482a44dd89a2561ca4e88e02f.wav.bak  U_58110d1b8d76440fbae298336516d8ae.wav.bak  V_47a7a9970bb445cc8fa088a9c7e4b6a4.wav.bak  V_e753872e7a674f7886f82c9404d8f9fb.wav.bak  Ơ_6a4ed7bbd5ef49c8a7e36aeb9546188c.wav.bak  Ơ_bc4f7ec38be440ad963379a31f5c2e80.wav.bak
dtw/: DTW.ipynb  dataset.py  feature-tsne.ipynb  feature_extractor.py
notebooks/: DTW.ipynb
pages/: __init__.py  course.py  home.py
src/: dataset.py  feature-tsne.ipynb  feature_extractor.py  model.pkl  models.py
src/ui/: utils.py
