[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "streamlit-pandas-profiling>=0.1.3",
    "streamlit>=1.41.1",
    "streamlit-webrtc>=0.47.9",
    "soundfile>=0.12.1",
    "streamlit-option-menu>=0.4.0",
    "pillow>=11.0.0",
]
