[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dropbox>=12.0.2",
    "dtw-python>=1.5.3",
    "jupyterlab>=4.3.4",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "ruff>=0.8.4",
    "scipy>=1.14.1",
    "streamlit>=1.41.1",
    "streamlit-audiorecorder>=0.0.6",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "transformers>=4.47.1",
]

[tool.pyright]
# reportUnknownMemberType = "none"
